--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "ejs": "^3.1.10",
     "express": "^4.20.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sweetalert2": "^11.14.0"
   },
-  "devDependencies": {},
   "description": ""
 }
